# napari-biomag-annotator

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
.napari/: config.yml
.napari-hub/: DESCRIPTION.md
src/napari_biomag_annotator/: __init__.py  _widget.py  install.bat  install.sh  napari.yaml  startup_napari.bat  startup_napari.sh
src/napari_biomag_annotator/_tests/: test_reader.py  test_widget.py  test_writer.py
