[metadata]
name = napari-biomag-annotator
version = attr: napari_biomag_annotator.__version__
description = An annotator tool collection by the BIOMAG group.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/biomag-lab/napari-biomag-annotator
author = Reka Hollandi
author_email = hunreka93@hotmail.com
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/biomag-lab/napari-biomag-annotator/issues
    Documentation = https://github.com/biomag-lab/napari-biomag-annotator#README.md
    Source Code = https://github.com/biomag-lab/napari-biomag-annotator
    User Support = https://github.com/biomag-lab/napari-biomag-annotator/issues

[options]
packages = find:
install_requires =
    napari
    napari-plugin-engine>=0.1.4
    napari-annotatorj
    napari-nD-annotator

python_requires = >=3.8
include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-biomag-annotator = napari_biomag_annotator:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.package_data]
* = *.yaml
